fixed #98, tested on linux
added /bin/bash (cmd for Win) to the .exec() so that quotes are properly
expanded